--- a/index.html
+++ b/index.html
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="styles.css" />
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-        <title>Freedom Stoves - Home of Freedom Pellet Stoves</title>
-    </head>
-    <body>
-        <div id="hero-banner">
-            <div id="hero-banner-text">
-                <h3 class="hero-text" id="hero-banner-subtitle">Welcome to the Home of</h4>
-                <h1 class="hero-text" id="hero-banner-title">FREEDOM STOVES</h2>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+    crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <title>Freedom Stoves - Home of Freedom Pellet Stoves</title>
+</head>
+<body>
+    <div id="hero-banner">
+        <div id="hero-banner-text">
+            <h4 class="hero-text bold" id="hero-banner-subtitle">Welcome to the Home of</h4>
+            <h1 class="hero-text" id="hero-banner-title">FREEDOM STOVES</h2>
             </div>
-        </div>
+        </div> <!-- hero-banner -->
+        <div class="container">
+            <section>
+                <h1 class="bold">I'm an H1</h1>
+                <h2 class="bold">I'm an H2</h2>
+                <h3 class="bold">I'm an H3</h3>
+                <h4 class="bold">I'm an H4</h4>
+                <p>I'm a paragraph!</p>
+            </section>
+            <section id="about-us">
+                <h4 class="flex-item">About Us</h4>
+                <h2 class="flex-item">Freedom Stoves</h2>
+                <div class="about-blab">
+                    <p class="flex-item">Freedom Stoves is dedicated to bringing you reliable, low emissions, unbeatable heating efficiency pellet and camp stoves.</p>
+                    <p class="flex-item">We inspect every unit to ensure a high performing heating unit you can trust with a committment to customer satisfaction.</p>
+                    <p class="flex-item">Whether you are new to the family of Freedom Stoves or already a part of our family,  we invite you to take a look at our quality heating appliances.</p>
+                </div> <!-- about-blab -->
+                <a class="link-button-secondary" href="#">Learn More <i class="bi bi-star-fill"></i></a>
+            </section>
+        </div> <!-- container -->
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"
         ></script>
     </body>
-</html>
+    </html>
