--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 class="flex-item">Freedom Stoves</h2>
                 <div class="about-blab">
                     <p class="flex-item">Freedom Stoves is dedicated to bringing you reliable, low emissions, unbeatable heating efficiency pellet and camp stoves.</p>
-                    <p class="flex-item">We inspect every unit to ensure a high performing heating unit you can trust with a committment to customer satisfaction.</p>
+                    <p class="flex-item">We inspect every unit to ensure a high performing heating unit you can trust with a commitment to customer satisfaction.</p>
                     <p class="flex-item">Whether you are new to the family of Freedom Stoves or already a part of our family,  we invite you to take a look at our quality heating appliances.</p>
                 </div> <!-- about-blab -->
                 <a class="link-button-secondary" href="#">Learn More <i class="bi bi-star-fill"></i></a>
