--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     </head>
     <body>
         <div id="hero-banner">
-            <div id="hero-banner-text">
+            <div class="d-flex flex-column align-items-center">
                 <h4 class="hero-text bold" id="hero-banner-subtitle">Welcome to the Home of</h4>
-                <h2 class="hero-text" id="hero-banner-title">FREEDOM STOVES</h2>
+                <div class="flex-head">
+                    <h2 class="hero-text flex-item">FREEDOM</h2>
+                    <h2 class="hero-text flex-item">STOVES</h2>
+                </div>
             </div>
         </div>
         <!-- hero-banner -->
@@ -34,8 +37,11 @@
                 <p>I'm a paragraph!</p>
             </section>
             <section id="about-us">
-                <h4 class="flex-item">About Us</h4>
-                <h2 class="flex-item">Freedom Stoves</h2>
+                <h4>About Us</h4>
+                <div class="flex-head">
+                    <h2 class="flex-item">Freedom</h2>
+                    <h2 class="flex-item">Stoves</h2>
+                </div>
                 <div class="about-blab">
                     <p class="flex-item">
                         Freedom Stoves is dedicated to bringing you reliable, low emissions, unbeatable heating efficiency pellet
@@ -56,7 +62,11 @@
                 ></a>
             </section>
             <section class="d-flex flex-column align-items-center justify-content-center">
-                <h2 id="product-header">Explore Our Products</h2>
+                <div class="flex-head">
+                    <h2 class="product-header flex-item">Explore</h2>
+                    <h2 class="product-header flex-item">Our</h2>
+                    <h2 class="product-header flex-item">Products</h2>
+                </div>
                 <div class="products d-flex justify-content-evenly flex-wrap">
                     <!-- LINK SECTION -->
                     <a href="https://freedomstoves.com/under-construction/" class="product-card-link">
