--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <section id="navbar"></section>
         <div id="hero-banner">
             <div class="d-flex flex-column align-items-center">
                 <h4 class="hero-text bold" id="hero-banner-subtitle">Welcome to the Home of</h4>
