--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <h2 class="bold">I'm an H2</h2>
                 <h3 class="bold">I'm an H3</h3>
                 <h4 class="bold">I'm an H4</h4>
+                <h5 class="bold">I'm an H5</h5>
+                <h6 class="bold">I'm an H6</h6>
+                <h7>I'm an H7</h7>
                 <p>I'm a paragraph!</p>
             </section>
             <section id="about-us">
@@ -81,6 +84,7 @@
                 <!-- about-blab -->
                 <a class="link-button-secondary" href="https://freedomstoves.com/under-construction/">Learn More <i class="bi bi-star-fill"></i></a>
             </section>
+            <!-- Explore Products Section -->
             <section class="d-flex flex-column align-items-center justify-content-center">
                 <div class="flex-head">
                     <h2 class="product-header flex-item">Explore</h2>
@@ -127,6 +131,37 @@
             <!-- products -->
         </div>
         <!-- container -->
+        <section id="footer">
+            <div class="container d-flex justify-content-evenly flex-wrap">
+                <div class="footer-col">
+                    <ul class="footer-list">
+                        <h6>Pellet Stoves</h6>
+                        <li class="footer-list-item"><a href="#">The Independence</a></li>
+                    </ul>
+                    <hr />
+                    <ul class="footer-list">
+                        <h6>Bio Mass Products</h6>
+                        <li class="footer-list-item"><a href="#">Drifters Camp Stove</a></li>
+                    </ul>
+                    <hr />
+                    <ul class="footer-list">
+                        <h6>Accessories</h6>
+                        <li class="footer-list-item"><a href="#">Pellet Stove Accessories</a></li>
+                        <li class="footer-list-item"><a href="#">Drifters Camp Stove Accessories</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a href="mailto://info@freedomstoves.com">Contact Us</a></li>
+                        <li class="footer-list-item"><a href="#">Where to Buy</a></li>
+                        <li class="footer-list-item"><a href="#">FAQs</a></li>
+                        <li class="footer-list-item"><a href="#">Warranty Information</a></li>
+                        <li class="footer-list-item"><a href="#">User Manuals</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- footer -->
         <!-- scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <script src="app.js"></script>
