Floated the hamburger menu.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="mobile-nav-item"><a href="/html/about.html">About</a></li>
                     <li class="mobile-nav-item"><a href="#">Pellet Stoves</a></li>
                     <li class="mobile-nav-item"><a href="#">Camp Stoves</a></li>
-                    <li class="mobile-nav-item"><a href="#">Contact</a></li>
+                    <li class="mobile-nav-item"><a href="mailto://info@freedomstoves.com">Contact</a></li>
                 </ul>
             </nav>
             <navbar class="navbar">
@@ -45,11 +45,11 @@
                                 </div></a
                             >
                         </li>
-                        <li class="nav-item"><a href="#">Contact</a></li>
-                        <li class="hamburger"><span></span><span></span><span></span></li>
+                        <li class="nav-item"><a href="mailto://info@freedomstoves.com">Contact</a></li>
                     </ul>
                 </div>
             </navbar>
+            <div class="hamburger"><span></span><span></span><span></span></div>
         </section>
         <!-- website-header -->
         <div id="hero-banner">
