--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,7 @@
                     <li class="mobile-nav-item"><a href="/html/about.html">About</a></li>
                     <li class="mobile-nav-item"><a href="#">Pellet Stoves</a></li>
                     <li class="mobile-nav-item"><a href="#">Camp Stoves</a></li>
-                    <li class="mobile-nav-item"><a href="#">Contact</a></li>
+                    <li class="mobile-nav-item"><a href="mailto://info@freedomstoves.com">Contact</a></li>
                 </ul>
             </nav>
             <navbar class="navbar">
@@ -46,7 +46,7 @@
                                 </div></a
                             >
                         </li>
-                        <li class="nav-item"><a href="#">Contact</a></li>
+                        <li class="nav-item"><a href="mailto://info@freedomstoves.com">Contact</a></li>
                         <li class="hamburger"><span></span><span></span><span></span></li>
                     </ul>
                 </div>
@@ -64,7 +64,7 @@
         </div>
         <!-- hero-banner -->
         <section class="container about-main">
-            <h3>What We Believe</h3>
+            <h2>What We Believe</h2>
             <p>What do you see when you look at a warm crackling fire? A cozy safe place, inviting atmosphere? Freedom? Freedom from the dependence on others for energy? Freedom from the uncertainty of life? Freedom to choose the way you want to live in your own home?</p>
             <p>We believe in empowering the spirit of self reliance by providing a choice of quality appliances that will keep your home warm. Freedom Stoves, LLC provides the very best innovative, cost effective, clean and safe units for you and your family.</p>
             <p>
@@ -109,6 +109,6 @@
         <!-- footer -->
         <!-- scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-        <!-- <script src="js/about.js"></script> -->
+        <script src="/js/app.js"></script>
     </body>
 </html>
